moves equals and clear button outside of operators div

--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
         <button id="decimal" class="digit">.</button>
       </div>
       <div class="operators">
-        <button id="clear" class="operator">C</button>
         <button id="divide" class="operator">/</button>
         <button id="multiply" class="operator">*</button>
         <button id="subtract" class="operator">-</button>
         <button id="add" class="operator">+</button>
-        <button id="equals" class="operator">=</button>
+      </div>
+      <div class="others">
+        <button id="clear" class="clear">C</button>
+        <button id="equals" class="equals">=</button>
       </div>
     </div>
 
