--- a/index.html
+++ b/index.html
@@ -8,29 +8,36 @@
   </head>
   <body>
     <div class="calculator">
-      <div class="display">0</div>
-      <div class="digits">
-        <button id="9" class="digit">9</button>
-        <button id="8" class="digit">8</button>
-        <button id="7" class="digit">7</button>
-        <button id="6" class="digit">6</button>
-        <button id="5" class="digit">5</button>
-        <button id="4" class="digit">4</button>
-        <button id="3" class="digit">3</button>
-        <button id="2" class="digit">2</button>
-        <button id="1" class="digit">1</button>
-        <button id="0" class="digit">0</button>
-        <button id="decimal" class="digit">.</button>
+      <div class="display-wrapper">
+        <div class="wrapper">
+          <div class="brand">CALCIOR PRO 9</div>
+          <div class="sun-cells"></div>
+        </div>
+        <div class="display">0</div>
       </div>
-      <div class="operators">
-        <button id="divide" class="operator">/</button>
-        <button id="multiply" class="operator">*</button>
-        <button id="subtract" class="operator">-</button>
-        <button id="add" class="operator">+</button>
-      </div>
-      <div class="others">
-        <button id="clear" class="clear">C</button>
-        <button id="equals" class="equals">=</button>
+      <div class="container">
+        <div class="operators">
+          <button id="divide" class="operator">/</button>
+          <button id="multiply" class="operator">*</button>
+          <button id="subtract" class="operator">-</button>
+          <button id="add" class="operator">+</button>
+          <button id="clear" class="clear">C</button>
+        </div>
+        <div class="digits">
+          <button id="9" class="digit">9</button>
+          <button id="8" class="digit">8</button>
+          <button id="7" class="digit">7</button>
+          <button id="6" class="digit">6</button>
+          <button id="5" class="digit">5</button>
+          <button id="4" class="digit">4</button>
+          <button id="3" class="digit">3</button>
+          <button id="2" class="digit">2</button>
+          <button id="1" class="digit">1</button>
+          <button id="0" class="digit">0</button>
+          <button id="decimal" class="digit">.</button>
+          <button id="equals" class="equals">=</button>
+        </div>
+        <div class="others"></div>
       </div>
     </div>
 
