--- a/index.html
+++ b/index.html
@@ -3,38 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculator</title>
+    <title>JuniorCalc 1.0 - Simple Calculator</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="calculator">
       <div class="display-wrapper">
-        <div class="wrapper">
-          <div class="brand">CALCIOR PRO 9</div>
+        <div class="brand-wrapper">
+          <div class="brand">JuniorCalc 1.0</div>
           <div class="sun-cells"></div>
         </div>
         <div class="display">0</div>
       </div>
       <div class="container">
-        <div class="digits">
-          <button id="clear" class="clear">C</button>
+        <div class="btns-wrapper">
+          <button class="clear">C</button>
           <button class="back-space">⌫</button>
-          <button id="divide" class="operator">/</button>
-          <button id="multiply" class="operator">*</button>
-          <button id="7" class="digit">7</button>
-          <button id="8" class="digit">8</button>
-          <button id="9" class="digit">9</button>
-          <button id="subtract" class="operator">-</button>
-          <button id="4" class="digit">4</button>
-          <button id="5" class="digit">5</button>
-          <button id="6" class="digit">6</button>
-          <button id="add" class="operator">+</button>
-          <button id="1" class="digit">1</button>
-          <button id="2" class="digit">2</button>
-          <button id="3" class="digit">3</button>
-          <button id="equals" class="equals">=</button>
-          <button id="zero" class="digit">0</button>
-          <button id="decimal" class="digit">.</button>
+          <button class="operator">/</button>
+          <button class="operator">*</button>
+          <button class="digit">7</button>
+          <button class="digit">8</button>
+          <button class="digit">9</button>
+          <button class="operator">-</button>
+          <button class="digit">4</button>
+          <button class="digit">5</button>
+          <button class="digit">6</button>
+          <button class="operator">+</button>
+          <button class="digit">1</button>
+          <button class="digit">2</button>
+          <button class="digit">3</button>
+          <button class="equals">=</button>
+          <button class="digit zero">0</button>
+          <button class="digit">.</button>
         </div>
       </div>
     </div>
